--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "autoprefixer": "^10.2.5",
     "coffee-script": "^1.12.7",
     "css-loader": "^4.2.1",
     "electron": "12.0.2",
@@ -90,13 +91,20 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^5.0.14",
     "node-loader": "^1.0.1",
+    "postcss": "^8.2.9",
+    "postcss-loader": "4.2.0",
+    "sass": "^1.32.8",
+    "sass-loader": "10.1.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.2",
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@popperjs/core": "^2.9.2",
     "auto-launch": "^5.0.5",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta3",
     "config": "^3.3.6",
     "copy-webpack-plugin": "^6.2.1",
     "dayjs": "^1.10.4",
