--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [],
   "author": {
     "name": "Kamil Rudnicki",
-    "email": "kamil.rudnicki@gmail.com"
+    "email": "k.rudnicki@timecamp.com"
   },
   "license": "MIT",
   "config": {
@@ -53,8 +53,8 @@
               "config": "./webpack.renderer.config.js",
               "entryPoints": [
                 {
-                  "html": "./src/app/stats/index.html",
-                  "js": "./src/app/stats/renderer.ts",
+                  "html": "./src/app/index.html",
+                  "js": "./src/app/renderer.ts",
                   "name": "main_window"
                 }
               ]
@@ -68,7 +68,7 @@
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.33",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.54",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
@@ -76,8 +76,10 @@
     "@types/config": "0.0.38",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "ajv": "^7.2.4",
     "autoprefixer": "^10.2.5",
     "coffee-script": "^1.12.7",
     "css-loader": "^4.2.1",
@@ -110,7 +112,10 @@
     "dayjs": "^1.10.4",
     "electron-log": "^4.3.2",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^7.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
