--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "auto-launch": "^5.0.5",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "chart.js": "^2.9.4",
     "config": "^3.3.6",
     "copy-webpack-plugin": "^6.2.1",
     "dayjs": "^1.10.4",
@@ -114,6 +115,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^7.0.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
