--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "sherlockjs": "^1.4.0"
   }
 }
